# schema-manager

./: README.md  pyproject.toml  schema-manager.yaml
schema_manager/: __init__.py  __main__.py  alembic_runner.py  applier.py  component_gate.py  config.py  health.py  metrics.py  osi.py  reconciler.py  self_upgrade.py  shadow.py  stubs.py  validator.py  watcher.py
tests/: test_reconciler_integration.py
